[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]

[node name="enemy" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
velocity = 400.0

[node name="Sprite" type="Sprite" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

[node name="SpawnNotifier" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -16, -16, 32, 32 )

[node name="SpawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]

[connection signal="screen_exited" from="SpawnNotifier" to="." method="_on_SpawnNotifier_screen_exited"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


